# Context-Engineering-For-Multi-Agent-Systems

./: .editorconfig  README.md  README.zh.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  pr-standards.yml  test.yml
nasa_documents/: juno_mission_overview.txt  perseverance_rover_tools.txt
src/chapter2/: app.py
src/chapter3/: app.py
src/chapter4/: app.py
src/chapter5/: agents.py  engine.py  execute.py  helpers.py  registry.py
src/chapter6/: agents.py  engine.py  execute.py  helpers.py  registry.py
src/chapter7/: agents.py  engine.py  execute.py  helpers.py  nasa_source.py  registry.py  text_vector.py
